--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.username = adadb
 spring.datasource.password = Contrasenia1!
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto= update 
+spring.datasource.hikari.maximumPoolSize=7
 
 jwt.secret = de chiquita me comia los bichos bolita
